--- a/the_spacebar/templates/article/show.html.twig
+++ b/the_spacebar/templates/article/show.html.twig
@@ -1,2 +1,16 @@
+{%  extends 'base.html.twig' %}
+
+{% block title %} Read {{ title }} {% endblock %}
+
+{% block body %}
 {# yay! #}
 <h1>{{ title }}</h1>
+
+<h2>Comments ({{ comments|length }})</h2>
+
+<ul>
+    {% for comment in comments %}
+        <li>{{ comment }}</li>
+    {% endfor %}
+</ul>
+{%  endblock %}
